objects/Program__c.object
<CustomObject>
    <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
    <fields>
        <fullName>Account_Management_Group__c</fullName>
        <label>Account Management Group</label>
        <picklist>
            <picklistValues>
                <fullName>CM Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-Concuity Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-Crimson Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-Employee Health Corporate BI Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-HC Research Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-HE RI Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-IT Consulting Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-Pay Nav Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-PT Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS-TD Partner Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Management_Reporting_Business__c</fullName>
        <label>Account Management Reporting Business</label>
        <picklist>
            <picklistValues>
                <fullName>ABI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paynav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spend Man</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Management_Reporting_Group__c</fullName>
        <label>Account Management Reporting Group</label>
        <picklist>
            <picklistValues>
                <fullName>Accountable Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Employee Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>e-Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC Employee Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Employee Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Graduation Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Pharmacy Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paynav</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT ED UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Quality UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Spend UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Surgery UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI Clinical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Management_Reporting_Vertical__c</fullName>
        <label>Account Management Reporting Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>Cost &amp; Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optilink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rev Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Users_Threshold__c</fullName>
        <description>Active users per month threshold - Field from PT Delivery Product custom object</description>
        <label>Active Users Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advisory_com_CS_Role__c</fullName>
        <description>CSRole is for Community Server, which is the discussion forum platform. It is a column in the program table in the adv.com database. It is pulled so that it can be saved in the user’s session cookie so when they go to the discussion forum, Community Server will know which forums they are able to access.</description>
        <label>Advisory.com CS Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analytics_Vendor_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field from PT Delivery Product custom object</description>
        <label>Analytics Vendor</label>
        <referenceTo>Vendor__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Programs_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicable_Segments__c</fullName>
        <label>Applicable Segments</label>
        <picklist>
            <picklistValues>
                <fullName>International Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International HCIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Physician Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US HCIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Independent School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Physician Practice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Available_to_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bundle Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Logins_Threshold__c</fullName>
        <description>Average logins per month threshold - Field from PT Delivery Product custom object</description>
        <label>Average Logins Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bundle_ID__c</fullName>
        <label>Bundle ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bundled_Opportunity_ID__c</fullName>
        <label>Bundled_Opportunity_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_line__c</fullName>
        <label>Business line</label>
        <picklist>
            <picklistValues>
                <fullName>CLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Group__c</fullName>
        <label>Company Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consistent_Users_Threshold__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Consistent Users Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>P{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Create_memberships__c</fullName>
        <label>Create memberships?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_In_To_Site_Live_Red__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Data In To Site Live Red</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_In_To_Site_Live_Yellow__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Data In To Site Live Yellow</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Effective_End__c</fullName>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start__c</fullName>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GUID__c</fullName>
        <formula>&quot;A0030000-0000-0000-0000-0000&quot; &amp; RIGHT(Counter_ID__c,8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiIstorical_Linker__c</fullName>
        <label>Historical Linker</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Member_for_Meetings__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-20141211-8303.</description>
        <inlineHelpText>Will mark as true for the Industry Members.</inlineHelpText>
        <label>Industry Member for Meetings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_City__c</fullName>
        <label>Invoice City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Company_Name__c</fullName>
        <inlineHelpText>What name should display at the top of the invoice for this Program?</inlineHelpText>
        <label>Invoice Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Format__c</fullName>
        <label>Invoice Format</label>
        <picklist>
            <picklistValues>
                <fullName>ABC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDCompass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EmployeeHealth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optilink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RevCycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Invoice_Logo__c</fullName>
        <formula>IF(LEN(Invoice_logo_URL__c )=0,&quot;&quot;, IMAGE(Invoice_logo_URL__c ,&quot;Logo&quot;))</formula>
        <label>Invoice Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_PostalCode__c</fullName>
        <label>Invoice PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_State__c</fullName>
        <inlineHelpText>State Abbreviation</inlineHelpText>
        <label>Invoice State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Street_Address__c</fullName>
        <label>Invoice Street Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_logo_URL__c</fullName>
        <label>Invoice logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOA_to_Today_Red__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>LOA to Today / OA Red</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_to_Today_Yellow__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>LOA to Today / OA Yellow</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_to_Welcome_Call_Red__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>LOA to Welcome Call Red</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOA_to_Welcome_Call_Yellow__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>LOA to Welcome Call Yellow</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Large_Contract_Threshold__c</fullName>
        <label>Large Contract Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Legal_to_Data_In_Red__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Legal to Data In Red</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legal_to_Data_In_Yellow__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Legal to Data In Yellow</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Program_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CR-318</description>
        <label>Marketing Program Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Business_Business__c</fullName>
        <label>New Business Business</label>
        <picklist>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Business_Group__c</fullName>
        <label>New Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>ABI PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABI TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concuity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Employee Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Pharmacy Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Employee Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Pharmacy Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Spend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optilink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayNav Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Practice Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Capability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Nursing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT Quality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Business_Marketer__c</fullName>
        <label>New Business Marketer</label>
        <picklist>
            <picklistValues>
                <fullName>ABI RI Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE or EA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCLF Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Integration Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ClinOps Solution Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concuity Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson Clinical Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson Market Advantage Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Engagement Survey Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Employee Health Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE Spend Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITI Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFI Products Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OptiLink Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PayNav Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBM Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI Clinical Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI Operations Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI Strategy Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SALC Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tech Insights Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UBER Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULC Marketer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Business_Vertical__c</fullName>
        <label>New Business Vertical</label>
        <picklist>
            <picklistValues>
                <fullName>ClinOps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Heatlh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RevCycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Commercial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for CR-5272</description>
        <label>Non Commercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presented__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Abbreviation__c</fullName>
        <description>This is an abbreviated product name which will be used in the Project Naming convention. - Field from PT Delivery Product custom object</description>
        <label>Product Abbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <description>CR-1793 We cannot change the current Program Acronym because it affects too many other system, but our employees are getting confused when they see these &apos;old&apos; acronyms.  When this field is updated, it kicks off batches that update existing Activities with the new abbreviation.</description>
        <inlineHelpText>A short program name to provide a more descriptive program title than &quot;Program Acronym&quot; but still short enough to appear cleanly on reports and dashboards.</inlineHelpText>
        <label>Program Abbreviation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Acronym__c</fullName>
        <description>CONTROLLED SOX FIELD. CHANGES TO FIELDS REQUIRE PRIOR APPROVAL FROM FINANCE OPS.</description>
        <label>Program Acronym</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Formal_Name__c</fullName>
        <label>Program Formal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Line__c</fullName>
        <label>Program Line</label>
        <picklist>
            <picklistValues>
                <fullName>CM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Sourcing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exclude</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry/Intl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med/Device</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Unit_Count__c</fullName>
        <label>Renewal Unit Count</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <picklist>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Live_to_OA_Red__c</fullName>
        <description>Field from PT Delivery Product custom object</description>
        <label>Site Live to OA Red</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>